# philosophers

./: .gitignore  README.md  flake.nix  main.c  shell.nix
.github/workflows/: norminette.yml
philo/: Makefile  meson.build
philo/includes/: action.h  parser.h  philo.h  utils.h
philo/src/: ft_philo.c  main.c  parser.c  thread_utils.c  utils.c
philo_bonus/: Makefile  meson.build
philo_bonus/includes/: philo.h  utils.h
philo_bonus/src/: ft_philo.c  main.c  thread_utils.c  utils.c
